openshift/os-sample-python-template.yaml
apiVersion: template.openshift.io/v1
kind: Template
labels:
  template: os-sample-python-template
message: |-
  The following service(s) have been created in your project: ${SAMPLE_APP_SERVICE_NAME}.
  For more information about using this template, including OpenShift considerations, consult the documentation in [dkelsey/os-sample-python](https://github.com/dkelsey/os-sample-python).
metadata:
  annotations:
    description: |-
      Sample OpenShift Python Template for use in OpenShift without persistent storage. 

      WARNING: Any configuration stored will be lost upon pod destruction. ConfigMaps should be used for codified configuration. 
    iconClass: icon-other-unknown
    openshift.io/display-name: os-sample-python
    openshift.io/documentation-url: https://github.com/dkelksey/os-sample-python
    openshift.io/long-description: This template provides a sample app and pipeline configuration for demonstration purposes.
    openshift.io/provider-display-name: BCDevOps
    openshift.io/support-url: https://github.com/bcdevops/
    tags: python,sample-app
  name: os-sample-python-template
objects: 
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    labels:
      app: ${SAMPLE_APP_SERVICE_NAME}
    name: ${SAMPLE_APP_SERVICE_NAME}
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: ${SAMPLE_APP_SERVICE_NAME}
      deploymentconfig: ${SAMPLE_APP_SERVICE_NAME}
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    labels:
      app: ${SAMPLE_APP_SERVICE_NAME}
    name: ${SAMPLE_APP_SERVICE_NAME}
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app:  ${SAMPLE_APP_SERVICE_NAME}
      deploymentconfig:  ${SAMPLE_APP_SERVICE_NAME}
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        labels:
          app: ${SAMPLE_APP_SERVICE_NAME}
          deploymentconfig: ${SAMPLE_APP_SERVICE_NAME}
      spec:
        containers:
        - image: 172.30.1.1:5000/devops-demo-dev/os-sample-python@sha256:57f9fac8bdab07fb27c9fe3c3eec94af6b69f68aedc6f57c16bf7fafdc6d71e7
          imagePullPolicy: Always
          name: ${SAMPLE_APP_SERVICE_NAME}
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - ${SAMPLE_APP_SERVICE_NAME}
        from:
          kind: ImageStreamTag
          name: ${SAMPLE_APP_SERVICE_NAME}:latest
          namespace: ${NAMESPACE}
          # lastTriggeredImage: 172.30.1.1:5000/devops-demo-dev/os-sample-python@sha256:57f9fac8bdab07fb27c9fe3c3eec94af6b69f68aedc6f57c16bf7fafdc6d71e7
      type: ImageChange
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    labels:
      app: ${SAMPLE_APP_SERVICE_NAME}
    name: ${SAMPLE_APP_SERVICE_NAME}
  spec:
    failedBuildsHistoryLimit: 5
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: ${SAMPLE_APP_SERVICE_NAME}:latest
    postCommit: {}
    resources: {}
    runPolicy: Serial
    source:
      git:
        uri: https://github.com/dkelsey/os-sample-python.git
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: python:3.6
          namespace: openshift
      type: Source
    successfulBuildsHistoryLimit: 5
    triggers:
    - github:
        secret: pCNHiab6dvy1zXxn_9PF
      type: GitHub
    - generic:
        secret: oN1T1n8w3MsdBDIUVkee
      type: Generic
    - type: ConfigChange
    - imageChange:
        lastTriggeredImageID: 172.30.1.1:5000/openshift/python@sha256:b78ccc700de3e8866aafa0b6267485d1dfb69bf7db9b2c57535ddaa388be5efa
      type: ImageChange
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    labels:
      app: ${SAMPLE_APP_SERVICE_NAME}
    name: ${SAMPLE_APP_SERVICE_NAME}
  spec:
    lookupPolicy:
      local: false
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    labels:
      app: ${SAMPLE_APP_SERVICE_NAME}
    name: ${SAMPLE_APP_SERVICE_NAME}
  spec:
    host: ${SAMPLE_APP_SERVICE_NAME}-${NAMESPACE}.${ROUTE_SUBDOMAIN}
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: ${SAMPLE_APP_SERVICE_NAME}
      weight: 100
    wildcardPolicy: None
parameters:
- description: The namespace this templated is deployed into.
  displayName: Namespace
  name: NAMESPACE
  value: devops-demo-dev
- description: The name of the OpenShift Service exposed for the sample application.
  displayName: Sample Service Name
  name: SAMPLE_APP_SERVICE_NAME
  required: true
  value: os-sample-python
- description: Default route subdomain (minishift)
  displayName: Route subdomain
  name: ROUTE_SUBDOMAIN
  required: true
  value: 192.168.64.4.nip.io
