openshift/os-sample-python.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    labels:
      app: os-sample-python
    name: os-sample-python
    namespace: devops-demo-dev
  spec:
    # clusterIP: 172.30.165.22
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: os-sample-python
      deploymentconfig: os-sample-python
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    labels:
      app: os-sample-python
    name: os-sample-python
    namespace: devops-demo-dev
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: os-sample-python
      deploymentconfig: os-sample-python
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: os-sample-python
          deploymentconfig: os-sample-python
      spec:
        containers:
        - image: 172.30.1.1:5000/devops-demo-dev/os-sample-python@sha256:57f9fac8bdab07fb27c9fe3c3eec94af6b69f68aedc6f57c16bf7fafdc6d71e7
          imagePullPolicy: Always
          name: os-sample-python
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - os-sample-python
        from:
          kind: ImageStreamTag
          name: os-sample-python:latest
          namespace: devops-demo-dev
        lastTriggeredImage: 172.30.1.1:5000/devops-demo-dev/os-sample-python@sha256:57f9fac8bdab07fb27c9fe3c3eec94af6b69f68aedc6f57c16bf7fafdc6d71e7
      type: ImageChange
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    labels:
      app: os-sample-python
    name: os-sample-python
    namespace: devops-demo-dev
  spec:
    failedBuildsHistoryLimit: 5
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: os-sample-python:latest
    postCommit: {}
    resources: {}
    runPolicy: Serial
    source:
      git:
        uri: https://github.com/dkelsey/os-sample-python.git
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: python:3.6
          namespace: openshift
      type: Source
    successfulBuildsHistoryLimit: 5
    triggers:
    - github:
        secret: pCNHiab6dvy1zXxn_9PF
      type: GitHub
    - generic:
        secret: oN1T1n8w3MsdBDIUVkee
      type: Generic
    - type: ConfigChange
    - imageChange:
        lastTriggeredImageID: 172.30.1.1:5000/openshift/python@sha256:b78ccc700de3e8866aafa0b6267485d1dfb69bf7db9b2c57535ddaa388be5efa
      type: ImageChange
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    labels:
      app: os-sample-python
    name: os-sample-python
    namespace: devops-demo-dev
  spec:
    lookupPolicy:
      local: false
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    labels:
      app: os-sample-python
    name: os-sample-python
    namespace: devops-demo-dev
  spec:
    host: os-sample-python-devops-demo-dev.192.168.64.4.nip.io
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: os-sample-python
      weight: 100
    wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
